<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>be.bosa.dt</groupId>
        <artifactId>best</artifactId>
        <version>1.0.2</version>
    </parent>
    <groupId>be.bosa.dt.best</groupId>
    <artifactId>dbloader</artifactId>
    <packaging>jar</packaging>
    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    <description>Database loader</description>
    <name>BeSt DB loader</name>
    <dependencies>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>xmlreader</artifactId>
            <version>1.0.2</version>
        </dependency>
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.4</version>
        </dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.2.18</version>
		</dependency>
	<!--
		<dependency>
            <groupId>org.orbisgis</groupId>
            <artifactId>h2gis-dist</artifactId>
            <version>1.5.0</version>
			<exclusions>
				<exclusion>
					<groupId>org.postgis</groupId>
					<artifactId>postgis-jdbc</artifactId>
				</exclusion>
			</exclusions>
        </dependency>
		<dependency>
            <groupId>org.orbisgis</groupId>
            <artifactId>cts</artifactId>
            <version>1.5.2</version>
        </dependency>
        <dependency>
            <groupId>org.orbisgis</groupId>
            <artifactId>h2gis-ext</artifactId>
            <version>1.3.2</version>
        </dependency>
				-->
    </dependencies>
</project>